--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                'primary-colour': '#FF4240',
               }
             }
           }
@@ -30,8 +31,82 @@
     </style>
 </head>
 <body class="font-manrope">
-    <header>
-         <h1>Hello</h1>
+    <header class="max-w-[1170px] mx-auto">
+    <!--nav bar-->
+    <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a class="text-primary-colour">Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <h3 class="text-4xl text-[#131318] font-extrabold">Hockey<span class="text-primary-colour">’</span>s</h3>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a class="text-primary-colour">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+            <img class="hidden lg:flex mr-4" src="Images/icon1.png" alt="">
+          <a class="btn bg-primary-colour text-white px-6">Get ticket</a>
+        </div>
+      </div>
+    <!--Banner-->
+    <div class="carousel w-full mt-12">
+        <div id="slide1" class="carousel-item relative w-full lg:h-[550px]" style="background-color: lightgray 0px 0px / 100% 100%;">
+        <div>
+          <img src="./Images/1.png" alt="">
+          <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
+            <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
+            <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+          </div>
+        </div> 
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a> 
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+    <!--slide 2-->     
+        <div id="slide2" class="carousel-item relative w-full">
+          <div>
+            <img src="./Images/1.png" alt="">
+            <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
+              <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
+              <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+            </div>
+          </div> 
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+    <!--slide 3-->     
+        <div id="slide3" class="carousel-item relative w-full">
+          <div>
+            <img src="./Images/1.png" alt="">
+            <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
+              <h3 class="text-white text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
+              <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+            </div>
+          </div> 
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+      </div>  
     </header>
     <main>
 
