professional hockey club designed

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
       </div>
     <!--Banner-->
-    <div class="carousel w-full mt-12">
-        <div id="slide1" class="carousel-item relative w-full lg:h-[550px]" style="background-color: lightgray 0px 0px / 100% 100%;">
+    <!-- <div class="carousel w-full mt-12 lg:h-[550px]">
+        <div id="slide1" class="carousel-item relative w-full" style="background-color: lightgray 0px 0px / 100% 100%;">
         <div>
           <img src="./Images/1.png" alt="">
           <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
@@ -77,9 +77,9 @@
             <a href="#slide4" class="btn btn-circle">❮</a> 
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
-        </div>
+        </div> -->
     <!--slide 2-->     
-        <div id="slide2" class="carousel-item relative w-full">
+        <!-- <div id="slide2" class="carousel-item relative w-full">
           <div>
             <img src="./Images/1.png" alt="">
             <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
@@ -91,9 +91,9 @@
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
-        </div>
+        </div> -->
     <!--slide 3-->     
-        <div id="slide3" class="carousel-item relative w-full">
+        <!-- <div id="slide3" class="carousel-item relative w-full">
           <div>
             <img src="./Images/1.png" alt="">
             <div class="max-w-[560px] h-[165px] border-2 p-4 bg-[#131318] rounded-2xl static lg:absolute top-[350px] right-10 border-black">
@@ -106,10 +106,68 @@
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
-      </div>  
+      </div>   -->
+            <!--Banner-->
+            <div class="w-full lg:relative lg:mt-12 p-2">
+              <div class="carousel w-full">
+                  <div id="slide1" class="carousel-item relative w-full lg:h-[550px]"
+                      style="background-color: lightgray 0px 0px / 100% 100%;">
+                      <div>
+                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                          <a href="#slide4" class="btn btn-circle">❮</a>
+                          <a href="#slide2" class="btn btn-circle">❯</a>
+                      </div>
+                  </div>
+                  <!--slide 2-->
+                  <div id="slide2" class="carousel-item relative w-full">
+                      <div>
+                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                          <a href="#slide1" class="btn btn-circle">❮</a>
+                          <a href="#slide3" class="btn btn-circle">❯</a>
+                      </div>
+                  </div>
+                  <!--slide 3-->
+                  <div id="slide3" class="carousel-item relative w-full">
+                      <div>
+                          <img class="lg:h-[550px] h-[220px]" src="./Images/1.png" alt="">
+                      </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                          <a href="#slide2" class="btn btn-circle">❮</a>
+                          <a href="#slide4" class="btn btn-circle">❯</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- text -->
+              <div
+                  class="max-w-[560px] static lg:absolute border-2 p-4 bg-[#131318] rounded-2xl lg:top-[380px] lg:right-10 border-black">
+                  <h3 class="text-white lg:text-[28px] font-extrabold mb-3">Meet all the heroes from the field</h3>
+                  <p class="text-sm font-medium text-[#FFFFFF99]">Nine former Buffalo Sabres players are enshrined in the
+                      Hockey Hall of Fame: Dave Andreychuk, Dick Duff, Grant Fuhr, Clark Gillies, Dale Hawerchuk, Tim
+                      Horton, Pat LaFontaine, Dominik Hasek, and Gilbert Perreault</p>
+              </div>
+          </div>
     </header>
-    <main>
-
+    <main class="max-w-[1170px] mx-auto mt-6">
+  <!--proffessional hockey club-->
+      <section>
+        <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
+          <h1 class="text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h1>
+          <p class="text-[#13131899] font-medium">Headquartered in Buffalo, NY, CoachMePlus works with professional and collegiate <br>sports teams to manage their athletes' sports performance data.</p>
+        </div>
+        <!--radial progress-->
+        <div>
+          <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
+          <h3>Prayer Facility</h3>
+        </div>
+        <!-- <img src="Images/Group 9.png" alt=""> -->
+        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
+        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
+        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
+      </section>
     </main>
     <footer>
 
