program section done

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div> 
       </div>   -->
             <!--Banner-->
-            <div class="w-full lg:relative lg:mt-12 p-2">
+            <div class="w-full lg:relative lg:my-12 p-3">
               <div class="carousel w-full">
                   <div id="slide1" class="carousel-item relative w-full lg:h-[550px]"
                       style="background-color: lightgray 0px 0px / 100% 100%;">
@@ -151,22 +151,107 @@
               </div>
           </div>
     </header>
-    <main class="max-w-[1170px] mx-auto mt-6">
+    <main class="max-w-[1170px] mx-auto mt-12 px-2">
   <!--proffessional hockey club-->
-      <section>
+      <section class="my-6">
         <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
           <h1 class="text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h1>
           <p class="text-[#13131899] font-medium">Headquartered in Buffalo, NY, CoachMePlus works with professional and collegiate <br>sports teams to manage their athletes' sports performance data.</p>
         </div>
         <!--radial progress-->
-        <div>
-          <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
-          <h3>Prayer Facility</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <!--87%-->
+        <div class="card lg:w-80 bg-base-100">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-primary-colour" style="--value:87; --size:9rem; --thickness: 12px;" role="progressbar"><span class="text-[#131318] text-3xl font-extrabold">87%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h3 class="text-[#131318] text-xl font-bold">Prayer Facility</h3>
+            <p class="text-[#131313] text-sm font-normal">Multi-faith prayer rooms. Multi-faith facilities are available at the club and are designated for spiritual/religious activities.</p>
+          </div>
         </div>
-        <!-- <img src="Images/Group 9.png" alt=""> -->
-        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
-        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
-        <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div>
+        <!--95%-->
+        <div class="card lg:w-80 bg-base-100">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-[#49D293]" style="--value:95; --size:9rem; --thickness: 12px;" role="progressbar"><span class="text-[#131318] text-3xl font-extrabold">95%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h3 class="text-[#131318] text-xl font-bold">Experienced Coach</h3>
+            <p class="text-[#131313] text-sm font-normal">All our coaches are trained and certified,to implement our proven leadership coaching process, 360 Feedforward Coaching.</p>
+          </div>
+        </div>
+        <!--90%-->
+        <div class="card lg:w-80 bg-base-100">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-[#FFB546]" style="--value:90; --size:9rem; --thickness: 12px;" role="progressbar"><span class="text-[#131318] text-3xl font-extrabold">90%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h3 class="text-[#131318] text-xl font-bold">Senior Players</h3>
+            <p class="text-[#131313] text-sm font-normal">Our Senior players facilities offer boys access to a rich vein of learning resources, and provide everything they need.</p>
+          </div>
+        </div>
+        <!--80%-->
+        <div class="card lg:w-80 bg-base-100">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-[#4C8DF1]" style="--value:80; --size:9rem; --thickness: 12px;" role="progressbar"><span class="text-[#131318] text-3xl font-extrabold">80%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h3 class="text-[#131318] text-xl font-bold">Training Ground</h3>
+            <p class="text-[#131313] text-sm font-normal">Recently we equipped with changing and physio rooms, a gym, catering kitchen and dining area to our training ground.</p>
+          </div>
+        </div>
+        </div>
+      </section>
+      <!--Program-->
+      <section class="my-12">
+        <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
+          <h1 class="text-4xl font-extrabold text-[#131318]">Program Sections</h1>
+          <p class="text-[#13131899] font-medium">Our hockey programs are for all players, including goalies, forwards, and defensemen <br> of all ages  from Novice to Pro.</p>
+        </div>
+        <!--layout-->
+        <div class="grid grid-cols-1  lg:grid-cols-2 gap-6 my-12 px-1">
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/2.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
+            <div class="lg:pt-32 pt-12 space-y-3 px-8">
+              <h3 class="text-3xl font-extrabold text-white">Junior Programs</h3>
+              <p class="text-white"> Junior program provides opportunities for players ages 16-to-20 to hone and enhance their skills and is an important part of the organization's overall efforts related to player development.</p>
+              <a class="btn bg-primary-colour text-white px-6 text-xl font-bold border-1 border-primary-colour">Register now!</a>
+            </div>
+          </div>
+          <!--card 2-->
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/3.png)] bg-no-repeat bg-cover col-span-1 h-[338px]">
+            <div class="lg:pt-32 pt-12 space-y-3 px-8">
+              <h3 class="text-3xl font-extrabold text-white">Teenager Programs</h3>
+              <p class="text-white"> Teenagers may find it a challenge to learn hockey as so many players they would be playing with and against have had such a long head start.They are creating their ability unstoppable.</p>
+              <a class="btn bg-primary-colour text-white px-6 text-xl font-bold border-1 border-primary-colour">Register now!</a>
+            </div>
+          </div>
+          <!--card-3-->
+          <div class="rounded-xl bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.3)),url(./Images/4.png)] bg-no-repeat bg-cover h-[338px] lg:col-span-2">
+            <div class="lg:pt-32 pt-12 space-y-3 px-8 lg:w-[450px]">
+              <h3 class="text-3xl font-extrabold text-white">Professional Programs</h3>
+              <p class="text-white"> Our program equips graduates with a  skillset that allows them to elevate  their performance in hockey-related roles and implement innovative.</p>
+              <a class="btn bg-primary-colour text-white px-6 text-xl font-bold border-1 border-primary-colour">Register now!</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Our product section-->
+      <section class="my-12">
+        <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
+          <h1 class="text-4xl font-extrabold text-[#131318]">Our New Products</h1>
+          <p class="text-[#13131899] font-medium">Our new arrival products are a turnkey solution to hockey training as we offer a <br> full  suite of training aids for all positions.</p>
+        </div>
+        <!--cards-->
+        <div class="card lg:card-side bg-base-100 shadow-xl">
+          <figure><img src="https://daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.jpg" alt="Album"/></figure>
+          <div class="card-body">
+            <h2 class="card-title">New album is released!</h2>
+            <p>Click the button to listen on Spotiwhy app.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Listen</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
