Our new product section completed

--- a/index.html
+++ b/index.html
@@ -242,15 +242,181 @@
           <p class="text-[#13131899] font-medium">Our new arrival products are a turnkey solution to hockey training as we offer a <br> full  suite of training aids for all positions.</p>
         </div>
         <!--cards-->
-        <div class="card lg:card-side bg-base-100 shadow-xl">
-          <figure><img src="https://daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.jpg" alt="Album"/></figure>
-          <div class="card-body">
-            <h2 class="card-title">New album is released!</h2>
-            <p>Click the button to listen on Spotiwhy app.</p>
-            <div class="card-actions justify-end">
-              <button class="btn btn-primary">Listen</button>
+        <div class="my-6 grid grid-cols-1 lg:grid-cols-2 gap-6">
+          <!--card 1-->
+          <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+            <img src="./Images/5.png" alt="">
+            <div>
+                <div class="flex gap-2">
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame.png" alt="">
+                    <p>5.0</p>
+                  </div>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame (1).png" alt="">
+                    <p>20</p>
+                  </div>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame (2).png" alt="">
+                    <p>200</p>
+                  </div> 
+                </div>
+                <h3 class="text-xl font-bold my-4">Jackets</h3> 
+                <p>This is our new arrival Jacket.It made by wool and 100% pure cotton.</p>
+                <div class="flex gap-5 my-4">
+                  <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame.svg" alt="">
+                    <p>Delivery Fee:Free</p>
+                  </div>
+                </div>  
+              </div>
+            </div>
+        <!--card 2-->
+        <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+          <img src="./Images/6.png" alt="">
+          <div>
+              <div class="flex gap-2">
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (1).png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (2).png" alt="">
+                  <p>200</p>
+                </div> 
+              </div>
+              <h3 class="text-xl font-bold my-4">World Cup flags Football</h3> 
+              <p>This is our new arrival Football.Its made for the purpose of the upcomming World Cup.</p>
+              <div class="flex gap-5 my-4">
+                <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.svg" alt="">
+                  <p>Delivery Fee:Free</p>
+                </div>
+              </div>  
             </div>
           </div>
+        <!--card 3--> 
+        <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+          <img src="./Images/7.png" alt="">
+          <div>
+              <div class="flex gap-2">
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (1).png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (2).png" alt="">
+                  <p>200</p>
+                </div> 
+              </div>
+              <h3 class="text-xl font-bold my-4">Cap for Hockey</h3> 
+              <p>This is our new arrival cap for hockey.It gives safety from the ultraviolet sunkiss.</p>
+              <div class="flex gap-5 mt-4">
+                <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.svg" alt="">
+                  <p>Delivery Fee:Free</p>
+                </div>
+              </div>  
+            </div>
+          </div>
+        <!--card 4--> 
+        <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+          <img src="./Images/8.png" alt="">
+          <div>
+              <div class="flex gap-2">
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (1).png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (2).png" alt="">
+                  <p>200</p>
+                </div> 
+              </div>
+              <h3 class="text-xl font-bold my-4">Jersy</h3> 
+              <p>This is our new arrival Jersy.It made by 100% pure cotton.</p>
+              <div class="flex gap-5 my-4">
+                <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.svg" alt="">
+                  <p>Delivery Fee:Free</p>
+                </div>
+              </div>  
+            </div>
+          </div>
+        <!--card 5-->
+        <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+          <img src="./Images/9.png" alt="">
+          <div>
+              <div class="flex gap-2">
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (1).png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame (2).png" alt="">
+                  <p>200</p>
+                </div> 
+              </div>
+              <h3 class="text-xl font-bold my-4">Helmets For Hockey</h3> 
+              <p>This is our new arrival Helmet.It gives safety from unwanted shots to face,head,eyes.</p>
+              <div class="flex gap-5 my-4">
+                <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                <div class="flex gap-1">
+                  <img src="./Images/Frame.svg" alt="">
+                  <p>Delivery Fee:Free</p>
+                </div>
+              </div>  
+            </div>
+          </div>
+          <!--card 6-->
+          <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
+            <img src="./Images/10.png" alt="">
+            <div>
+                <div class="flex gap-2">
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame.png" alt="">
+                    <p>5.0</p>
+                  </div>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame (1).png" alt="">
+                    <p>20</p>
+                  </div>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame (2).png" alt="">
+                    <p>200</p>
+                  </div> 
+                </div>
+                <h3 class="text-xl font-bold my-4">World Cup Football</h3> 
+                <p>This is our new arrival Football.It also made for the purpose of upcomming world cup.</p>
+                <div class="flex gap-5 my-4">
+                  <p><span class="text-primary-colour font-semibold">Price - $22.00</span></p>
+                  <div class="flex gap-1">
+                    <img src="./Images/Frame.svg" alt="">
+                    <p>Delivery Fee:Free</p>
+                  </div>
+                </div>  
+              </div>
+            </div>
         </div>
       </section>
     </main>
