client section done

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <p class="text-[#13131899] font-medium">Our new arrival products are a turnkey solution to hockey training as we offer a <br> full  suite of training aids for all positions.</p>
         </div>
         <!--cards-->
-        <div class="my-6 grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <div class="my-12 grid grid-cols-1 lg:grid-cols-2 gap-6">
           <!--card 1-->
           <div class="flex flex-col lg:flex-row gap-6 border-2 border-[#0D0D121A] shadow-xl rounded-xl p-4">
             <img src="./Images/5.png" alt="">
@@ -419,6 +419,109 @@
             </div>
         </div>
       </section>
+      <!--Client Questions-->
+      <section class="my-12">
+        <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
+          <h1 class="text-4xl font-extrabold text-[#131318]">Clients Question</h1>
+          <p class="text-[#13131899] font-medium">Our helpful FAQ page (more likely an FAQ hub of core pages and topical intent) <br>shortens the time it takes for you to solve your search requirements.</p>
+        </div>
+        <div class="flex flex-col lg:flex-row border-2 border-[#0D0D121A] shadow-lg rounded-xl my-12 p-8 gap-14">
+          <img src="./Images/11.png" alt="">
+          <!--accordian-->
+          <div>
+          <!--first question-->
+          <!-- <div class="collapse collapse-arrow bg-base-200">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-medium">
+              Our Equipment
+            </div>
+            <div class="collapse-content"> 
+              <p>We provide the all ice hockey protective equipment apart from headgear, mouthguards, neck and throat protections, gloves and leg guards must be worn underneath and be fully.</p>
+            </div>
+          </div> -->
+          <!--second question-->
+          <!-- <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Hockey Training
+            </div>
+            <div class="collapse-content"> 
+              <p>Our hockey programs are for players and goalies of all ages from Novice to Pro, where we provide expert instruction.</p>
+            </div>
+          </div> -->
+          <!--third question-->
+          <!-- <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Click to open this one and close others
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+          </div> -->
+          <div class="join join-vertical w-full">
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" checked="checked" /> 
+              <div class="collapse-title text-xl font-medium">
+                Our Equipment
+              </div>
+              <div class="collapse-content"> 
+                <p>We provide the all ice hockey protective equipment apart from headgear, mouthguards, neck and throat protections, gloves and leg guards must be worn underneath and be fully safe for all situation.We provide the top class equipments for Hockey Players.</p>
+              </div>
+            </div>
+            <!--second question-->
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" /> 
+              <div class="collapse-title text-xl font-medium">
+                Hockey Training
+              </div>
+              <div class="collapse-content"> 
+                <p>Our hockey programs are for players and goalies of all ages from Novice to Pro, where we provide expert instruction.</p>
+              </div>
+            </div>
+            <!--third question-->
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" /> 
+              <div class="collapse-title text-xl font-medium">
+                Private Lessons
+              </div>
+              <div class="collapse-content"> 
+                <p>With our private lessons, you can definitely increase your skill level to the best level.</p>
+              </div>
+            </div>
+            <!--Fourth Question-->
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" /> 
+              <div class="collapse-title text-xl font-medium">
+                Skill Touring
+              </div>
+              <div class="collapse-content"> 
+                <p>With our private lessons, you can definitely increase your skill level to the best level.</p>
+              </div>
+            </div>
+            <!--fifth question-->
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" /> 
+              <div class="collapse-title text-xl font-medium">
+                Booking
+              </div>
+              <div class="collapse-content"> 
+                <p>You can now book training sessions, pitch time and coaching via our online booking system.</p>
+              </div>
+            </div>
+            <!--Sixth Question-->
+            <div class="collapse collapse-plus join-item border border-base-300">
+              <input type="radio" name="my-accordion-4" /> 
+              <div class="collapse-title text-xl font-medium">
+                Progress
+              </div>
+              <div class="collapse-content"> 
+                <p> The pathway from team to team and from age group to age group is a coach led strategy.</p>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
     </main>
     <footer>
 
