get in touch section completed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buffalo Sabres</title>
+    <!--Font awesome-->
+    <script src="https://kit.fontawesome.com/d7c0cd9c88.js" crossorigin="anonymous"></script>
     <!--tailwind and daisy-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -429,36 +431,6 @@
           <img src="./Images/11.png" alt="">
           <!--accordian-->
           <div>
-          <!--first question-->
-          <!-- <div class="collapse collapse-arrow bg-base-200">
-            <input type="radio" name="my-accordion-3" checked="checked" /> 
-            <div class="collapse-title text-xl font-medium">
-              Our Equipment
-            </div>
-            <div class="collapse-content"> 
-              <p>We provide the all ice hockey protective equipment apart from headgear, mouthguards, neck and throat protections, gloves and leg guards must be worn underneath and be fully.</p>
-            </div>
-          </div> -->
-          <!--second question-->
-          <!-- <div class="collapse collapse-plus bg-base-200">
-            <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-medium">
-              Hockey Training
-            </div>
-            <div class="collapse-content"> 
-              <p>Our hockey programs are for players and goalies of all ages from Novice to Pro, where we provide expert instruction.</p>
-            </div>
-          </div> -->
-          <!--third question-->
-          <!-- <div class="collapse collapse-plus bg-base-200">
-            <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
-            </div>
-            <div class="collapse-content"> 
-              <p>hello</p>
-            </div>
-          </div> -->
           <div class="join join-vertical w-full">
             <div class="collapse collapse-plus join-item border border-base-300">
               <input type="radio" name="my-accordion-4" checked="checked" /> 
@@ -522,6 +494,69 @@
           </div>
           </div>
         </div>
+      </section>
+      <!--Newsletter-->
+      <section class="my-12">
+        <div class="text-center space-y-4 border-2 border-r-0 border-l-0 border-[#13131833] border-dashed py-8">
+          <h1 class="text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
+          <p class="text-[#13131899] font-medium"> “We're Here to Help!” and “Reach out to us anytime and we'll happily answer your questions.” <br> If you have any doubt or question to us,Let fill the section and stay with us.</p>
+        </div> 
+        <div class="flex flex-col lg:flex-row gap-12 my-12">
+          <div class="border-2 border-[#0D0D121A] shadow-lg rounded-xl p-12">
+            <div class="rounded-2xl bg-[#BCED6D1A] p-8 lg:w-[350px]">
+              <img src="./Images/Group 1171275317.png" alt="">
+              <p class="my-2">Phone number:</p>
+              <h3 class="font-bold">01810313991</h3>
+            </div>
+            <div class="rounded-2xl bg-[#FDDD5F1A] p-8 my-6 lg:w-[350px]">
+              <img src="./Images/Group 1171275318.png" alt="">
+              <p class="my-2">E-mail:</p>
+              <h3 class="font-bold">sisazid182713@gmail.com</h3>
+            </div>
+            <div class="rounded-2xl bg-[#629CF31A] p-8 lg:w-[350px]">
+              <img src="./Images/Group 1171275321.png" alt="">
+              <p class="my-2">Location:</p>
+              <h3 class="font-bold"> 152/1 Mohakhali Wireless Gate</h3>
+            </div>
+          </div>
+          <!--contact form-->
+          <div>
+            <div class="flex flex-col lg:flex-row lg:gap-8">
+              <div>
+                <h3 class="font-bold">Your Name</h3>
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your full name">
+              </div>
+              <div>
+                <h3 class="font-bold">Your E-mail</h3>
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="email" placeholder="Enter Your e-mail">
+              </div>  
+            </div>
+            <div class="flex flex-col lg:flex-row lg:gap-8">
+              <div>
+                <h3 class="font-bold">Subject</h3>
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your Subject">
+              </div>
+              <div>
+                <h3 class="font-bold">Phone Number</h3>
+                <input class="bg-[#13131808] lg:py-3 lg:pl-4 lg:pr-28 w-full p-3 rounded-lg my-4" type="text" placeholder="Enter Your Phone number">
+              </div>  
+            </div>
+            <div>
+              <h3 class="font-bold">Message</h3>
+              <textarea class="bg-[#13131808] my-4 p-6 rounded-lg w-full lg:w-[655px] h-[370px]" name="" id="" placeholder="Write Your Messages"></textarea>
+            </div>
+            <button class="btn w-full bg-primary-colour text-white lg:w-[655px] lg:text-lg">Send Message</button>
+          </div>
+        </div>
+        <div class="rounded-xl bg-[#13131808] text-center py-12">
+          <h3 class="font-extrabold text-2xl text-[#131318]">Social media</h3>
+          <div class="mt-4 text-3xl">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a class="mx-3" href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+            <a class="mx-3" href=""><i class="fa-brands fa-github"></i></a>
+          </div>
+        </div>  
     </main>
     <footer>
 
