footer section modified

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           </div>
         </div>
         <!--2nd and 3rd-->
-        <div class="flex gap-24 lg:gap-40">
+        <div class="flex gap-28 justify-center text-center lg:text-start lg:gap-40">
           <div>
             <nav>
               <h3 class="text-white text-2xl font-extrabold mb-4">Company</h3>
